# idmbot

idmbot/: CMakeLists.txt  package.xml
idmbot_core/: CMakeLists.txt  package.xml
idmbot_core/include/idmbot_core/: idmbot_core_config.h
idmbot_core/src/: idmbot_core.cpp
idmbot_libs/: CMakeLists.txt  package.xml
idmbot_libs/include/idmbot_libs/: idmbot.h  idmbot_arm.h  idmbot_wheel.h
idmbot_libs/src/: idmbot_arm.cpp  idmbot_wheel.cpp
