<?xml version="1.0"?>
<package format="2">
  <name>idmbot_libs</name>
  <version>0.0.1</version>
  <description>
    idmbot library ( Dynamixel lib. )
  </description>
  <license>Apache 2.0</license>
  <author email="william.lee@idminer.com.tw">William L</author>
  <maintainer email="william.lee@idminer.com.tw">William L</maintainer>  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>cmake_modules</depend>
  <depend>dynamixel_workbench_toolbox</depend>
  <depend>roscpp</depend>
</package>